--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "at-namnguyen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "sleep": "^6.0.0"
+  }
 }
