--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "sleep": "^6.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.3.3333"
   }
 }
