--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "formidable": "^1.2.1",
+    "multer": "^1.4.1",
+    "nodemon": "^1.18.10",
     "sleep": "^6.0.0"
   },
   "devDependencies": {},
