--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node basic",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-development": "nodemon ./express/main.js"
   },
   "author": "at-namnguyen",
   "license": "ISC",
@@ -17,6 +17,11 @@
     "sleep": "^6.0.0"
   },
   "devDependencies": {
+    "nodemon": "^1.18.10",
     "typescript": "^3.3.3333"
+  },
+  "nodemonConfig": {
+    "ignore": ["./basics/*", "tmp/*", "express/public/*", "express/resources/*"],
+    "delay": "1000"
   }
 }
