--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-group-routes": "^1.1.0",
+    "jsonwebtoken": "^8.5.0",
+    "md5": "^2.2.1",
     "multer": "^1.4.1",
     "sleep": "^6.0.0"
   },
@@ -21,7 +23,12 @@
     "typescript": "^3.3.3333"
   },
   "nodemonConfig": {
-    "ignore": ["./basics/*", "tmp/*", "express/public/*", "express/resources/*"],
+    "ignore": [
+      "./basics/*",
+      "tmp/*",
+      "express/public/*",
+      "express/resources/*"
+    ],
     "delay": "1000"
   }
 }
