--- a/w2/package.json
+++ b/w2/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "w2",
+  "name": "w2 Express",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": "quan.tran2@asiantech.vn",
+  "license": "ISC",
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
