--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
+    "jsonwebtoken": "^8.5.0",
     "multer": "^1.4.1",
     "nodemon": "^1.18.10",
     "sleep": "^6.0.0"
