--- a/w2/package.json
+++ b/w2/package.json
@@ -1,18 +1,28 @@
 {
-  "name": "w2 Express",
+  "name": "w2",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www --exec babel-node",
+    "debug": "nodemon --inspect ./bin/www --exec babel-node"
   },
   "author": "quan.tran2@asiantech.vn",
   "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.18.9"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "~4.16.4",
     "http-errors": "~1.6.2",
+    "method-override": "^3.0.0",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.18",
     "morgan": "~1.9.0"
   }
 }
