--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-fileupload": "^1.1.2-alpha.1",
+    "multer": "^1.4.1",
     "node-persist": "^3.0.4"
   }
 }
