--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "app-root-path": "^2.1.0",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.0",
     "multer": "^1.4.1",
     "nodemon": "^1.18.10",
+    "pug": "^2.0.3",
     "sleep": "^6.0.0"
   },
   "devDependencies": {},
