--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "access-log": "^0.4.1",
     "cookie-parser": "^1.4.4",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-group-routes": "^1.1.0",
     "jsonwebtoken": "^8.5.0",
