--- a/w2/package.json
+++ b/w2/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.4",
     "http-errors": "~1.6.2",
