--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.0",
     "md5": "^2.2.1",
     "multer": "^1.4.1",
+    "pug": "^2.0.3",
     "sleep": "^6.0.0"
   },
   "devDependencies": {
