--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.0",
     "md5": "^2.2.1",
     "mongoose": "^5.4.19",
+    "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.1",
     "pug": "^2.0.3",
     "sleep": "^6.0.0"
