--- a/w2/package.json
+++ b/w2/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "mongodb": "^3.1.13",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "pug": "^2.0.3"
   }
 }
