--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "express": "^4.16.4",
     "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.19",
     "multer": "^1.4.1",
     "nodemon": "^1.18.10",
+    "pg": "^7.8.2",
     "pug": "^2.0.3",
     "sleep": "^6.0.0"
   },
