--- a/w2/package.json
+++ b/w2/package.json
@@ -15,12 +15,14 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.4",
     "http-errors": "~1.6.2",
+    "jsonwebtoken": "^8.5.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.18",
