--- a/w2/MongoDB/package.json
+++ b/w2/MongoDB/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.4.19",
     "nodemon": "^1.18.10"
   }
