--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "access-log": "^0.4.1",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.5.0",
+    "express-group-routes": "^1.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "mongoose": "^5.4.19",
-    "nodemon": "^1.18.10",
+    "mongoose-paginate": "^5.0.3",
     "widest-line": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "build-devlopment": "nodemon ./main.js",
+    "debug": "nodemon --legacy-watch --watch ./ --inspect=0.0.0.0:9222 --nolazy ./main.js"
   },
   "repository": {
     "type": "git",
